selftests/bpf: fix signedness bug in redir_partial() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33938,6 +33938,7 @@
 	patches.suse/bpf-Make-reg_not_null-true-for-CONST_PTR_TO_MAP.patch
 	patches.suse/selftests-bpf-Add-cmp_map_pointer_with_const-test.patch
 	patches.suse/selftests-bpf-Add-test-cases-with-CONST_PTR_TO_MAP-n.patch
+	patches.suse/selftests-bpf-fix-signedness-bug-in-redir_partial.patch
 	patches.suse/bpftool-Fix-JSON-writer-resource-leak-in-version-com.patch
 	patches.suse/bpftool-Fix-memory-leak-in-dump_xx_nlmsg-on-realloc-.patch
 	patches.suse/iommu-amd-Fix-geometry.aperture_end-for-V2-tables.patch
