--- a/series.conf
+++ b/series.conf
@@ -32491,6 +32491,7 @@
 	patches.suse/ata-libata-scsi-Fix-ata_msense_control_ata_feature.patch
 	patches.suse/ata-libata-scsi-Improve-CDL-control.patch
 	patches.suse/scsi-Improve-CDL-control.patch
+	patches.suse/selftests-bpf-Mitigate-sockmap_ktls-disconnect_after.patch
 	patches.suse/samples-bpf-Fix-compilation-failure-for-samples-bpf-.patch
 	patches.suse/Revert-drm-meson-vclk-fix-calculation-of-59.94-fract.patch
 	patches.suse/drm-amd-display-Fix-gpu-reset-in-multidisplay-config.patch
