selftests/bpf: Fix string read in strncmp benchmark (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32095,6 +32095,7 @@
 	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
 	patches.suse/bpf-bpftool-Setting-error-code-in-do_loader.patch
+	patches.suse/selftests-bpf-Fix-string-read-in-strncmp-benchmark.patch
 	patches.suse/x86-Kconfig-Always-enable-ARCH_SPARSEMEM_ENABLE.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-entry-Fix-ORC-unwinder-for-PUSH_REGS-with-save_ret-1.patch
