--- a/blacklist.conf
+++ b/blacklist.conf
@@ -587,3 +587,8 @@ b7ee30f0efd12f42735ae233071015389407966c # fix requires function and struct fiel
 dbdf2a7feb422f9bacfd12774e624cf26f503eb0 # rust
 0fbbcab7f9082cdc233da5e5e353f69830f11956 # comments only
 68889dfd547bd8eabc5a98b58475d7b901cf5129 # we do CONFIG_SOCK_CGROUP_DATA=y
+a001cd248ab244633c5fabe4f7c707e13fc1d1cc # selftests
+4bc6bf7b8830cc403a3cea7f4ef8794831126f54 # docs of unsupported f2fs
+cc4d900d0d6d8dd5c41832a93ff3cfa629a78f9a # no support of stm32 console
+8278c6914306f35f32d73bdf2a918950919a0051 # too intrusive
+3ab10f83e277ba9640742cbba67b8df369591450 # too intrusive
