media: atomisp: Remove firmware_name module parameter (bsc#1252973).

--- a/series.conf
+++ b/series.conf
@@ -26773,6 +26773,7 @@
 	patches.suse/media-qcom-camss-Add-check-for-v4l2_fwnode_endpoint_.patch
 	patches.suse/media-venus-flush-all-buffers-in-output-plane-stream.patch
 	patches.suse/media-venus-fix-use-after-free-in-vdec_close.patch
+	patches.suse/media-atomisp-Remove-firmware_name-module-parameter.patch
 	patches.suse/drm-amd-Add-gfx12-swizzle-mode-defs.patch
 	patches.suse/drm-amdgpu-Fix-uninitialized-variable-warning-in-amd.patch
 	patches.suse/drm-amd-display-Add-delay-to-improve-LTTPR-UHBR-inte.patch
