--- a/series.conf
+++ b/series.conf
@@ -12663,6 +12663,7 @@
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
+	patches.suse/PCI-qcom-Add-equalization-settings-for-8.0-GT-s-and-3.patch
 	patches.suse/PCI-rcar-gen4-Fix-PHY-initialization.patch
 	patches.suse/PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-reset-.patch
 	patches.suse/PCI-rcar-gen4-Assure-reset-occurs-before-DBI-access.patch
@@ -13378,6 +13379,7 @@
 	patches.kabi/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
 	patches.kabi/net-kcm-Fix-race-condition-in-kcm_unattach.patch
 	patches.kabi/kABI-fix-for-struct-hrtimer_cpu_base.patch
+	patches.kabi/PCI-qcom-Add-equalization-settings-for-8.0-GT-s-and-3.patch
 
 	########################################################
 	# preempt-rt backport converged
