PCI: Use min_align, not unrelated add_align, for size0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7774,6 +7774,7 @@
 	patches.suse/PCI-Avoid-reset-when-disabled-via-sysfs.patch
 	patches.suse/PCI-Use-downstream-bridges-for-distributing-resources.patch
 	patches.suse/PCI-Remove-add_align-overwrite-unrelated-to-size0.patch
+	patches.suse/PCI-Use-min_align-not-unrelated-add_align-for-size0.patch
 	patches.suse/PCI-Simplify-size1-assignment-logic.patch
 	patches.suse/PCI-Allow-relaxed-bridge-window-tail-sizing-for-opti.patch
 	patches.suse/PCI-Fix-old_size-lower-bound-in-calculate_iosize-too.patch
