PCI: Test for bit underflow in pcie_set_readrq() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12332,6 +12332,7 @@
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
 	patches.suse/xfs-rename-the-old_crc-variable-in-xlog_recover_process.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
+	patches.suse/PCI-Test-for-bit-underflow-in-pcie_set_readrq.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-cputype-Add-Neoverse-V3AE-definitions.patch
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
