--- a/series.conf
+++ b/series.conf
@@ -12838,6 +12838,7 @@
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
+	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/serial-8250_mtk-Enable-baud-clock-and-manage-in-runt.patch
