--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1225,3 +1225,12 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 5a830bbce3af16833fe0092dec47b6dd30279825 # pure cleanup
 27af31e44949fa85550176520ef7086a0d00fd7b # cleanup for clang
 448dfecc7ff807822ecd47a5c052acedca7d09e8 # CVE-2025-39795 https://bugzilla.suse.com/show_bug.cgi?id=1249609#c2
+cc4d900d0d6d8dd5c41832a93ff3cfa629a78f9a # no support of stm32 console
+22a048b0749346b6e3291892d06b95278d5ba84a # cleanup
+2de8a1b46756b5a79d8447f99afdfe49e914225a # cleanup
+0c84bea0cabc4e2b98a3de88eeb4ff798931f056 # cleanup
+1c05bf6c0262f946571a37678250193e46b1ff0f # cleanup (save a read+write)
+a001cd248ab244633c5fabe4f7c707e13fc1d1cc # selftests
+4bc6bf7b8830cc403a3cea7f4ef8794831126f54 # docs of unsupported f2fs
+8278c6914306f35f32d73bdf2a918950919a0051 # too intrusive
+3ab10f83e277ba9640742cbba67b8df369591450 # too intrusive
