--- a/series.conf
+++ b/series.conf
@@ -34769,6 +34769,7 @@
 	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoint.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
+	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
