serial: 8250_exar: add support for Advantech 2 port card with Device ID 0x0018 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34861,6 +34861,7 @@
 	patches.suse/spi-spi-nxp-fspi-add-extra-delay-after-dll-locked.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
+	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
