md/raid1: fix data lost for writemostly rdev (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34438,6 +34438,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-fix-REFCLK-setting.patch
 	patches.suse/drm-amdgpu-drop-hw-access-in-non-DC-audio-fini.patch
 	patches.suse/drm-amd-amdgpu-Fix-missing-error-return-on-kzalloc-f.patch
+	patches.suse/md-raid1-fix-data-lost-for-writemostly-rdev.patch
 	patches.suse/platform-x86-amd-pmc-Add-TUXEDO-IB-Pro-Gen10-AMD-to-.patch
 	patches.suse/hwmon-mlxreg-fan-Prevent-fans-from-getting-stuck-at-.patch
 	patches.suse/cifs-prevent-NULL-pointer-dereference-in-UTF16-conversion.patch
