--- a/series.conf
+++ b/series.conf
@@ -34735,6 +34735,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/scsi-hpsa-Fix-potential-memory-leak-in-hpsa_big_passthru_i.patch
+	patches.suse/scsi-mpt3sas-Fix-crash-in-transport-port-remove-by-using-i.patch
 	patches.suse/vhost-vringh-Modify-the-return-value-check.patch
 	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
