block: fix kobject double initialization in add_disk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34249,6 +34249,7 @@
 	patches.suse/ALSA-usb-audio-Validate-UAC3-power-domain-descriptor.patch
 	patches.suse/ALSA-usb-audio-Validate-UAC3-cluster-segment-descrip.patch
 	patches.suse/io_uring-net-commit-partial-buffers-on-retry.patch
+	patches.suse/block-fix-kobject-double-initialization-in-add_disk.patch
 	patches.suse/drm-amdgpu-fix-incorrect-vm-flags-to-map-bo.patch
 	patches.suse/drm-amdgpu-fix-task-hang-from-failed-job-submission-.patch
 	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
