--- a/series.conf
+++ b/series.conf
@@ -34865,6 +34865,7 @@
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
+	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
