block: avoid possible overflow for chunk_sectors check in blk_stack_limits() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34219,6 +34219,7 @@
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 	patches.suse/ASoC-Intel-avs-Fix-uninitialized-pointer-error-in-pr.patch
 	patches.suse/gpio-mlxbf2-use-platform_get_irq_optional.patch
+	patches.suse/block-avoid-possible-overflow-for-chunk_sectors-check-in-b.patch
 	patches.suse/md-md-cluster-handle-REMOVE-message-earlier.patch
 	patches.suse/md-make-rdev_addable-usable-for-rcu-mode.patch
 	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
