scsi: Fix sas_user_scan() to handle wildcard and multi-channel scans (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34179,6 +34179,7 @@
 	patches.suse/scsi-mpt3sas-Fix-a-fw_event-memory-leak.patch
 	patches.suse/scsi-aacraid-Stop-using-PCI_IRQ_AFFINITY.patch
 	patches.suse/scsi-Revert-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
+	patches.suse/scsi-Fix-sas_user_scan-to-handle-wildcard-and-multi-channe.patch
 	patches.suse/scsi-sd-Make-sd-shutdown-issue-START-STOP-UNIT-appropriate.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
