scsi: aacraid: Stop using PCI_IRQ_AFFINITY (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34177,6 +34177,7 @@
 	patches.suse/perf-core-Prevent-VMA-split-of-buffer-mappings.patch
 	patches.suse/selftests-perf_events-Add-a-mmap-correctness-test.patch
 	patches.suse/scsi-mpt3sas-Fix-a-fw_event-memory-leak.patch
+	patches.suse/scsi-aacraid-Stop-using-PCI_IRQ_AFFINITY.patch
 	patches.suse/scsi-Revert-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 	patches.suse/scsi-sd-Make-sd-shutdown-issue-START-STOP-UNIT-appropriate.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
