--- a/series.conf
+++ b/series.conf
@@ -12180,6 +12180,7 @@
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/proc-fix-type-confusion-in-pde_set_flags.patch
 	patches.suse/mm-damon-sysfs-fix-use-after-free-in-state_show.patch
+	patches.suse/tcp_bpf-Call-sk_msg_free-when-tcp_bpf_send_verdict-f.patch
 	patches.suse/btrfs-fix-squota-compressed-stats-leak.patch
 	patches.suse/btrfs-fix-corruption-reading-compressed-range-when-b.patch
 	patches.suse/btrfs-fix-subvolume-deletion-lockup-caused-by-inodes.patch
