--- a/series.conf
+++ b/series.conf
@@ -8738,6 +8738,7 @@
 	patches.suse/KVM-x86-Reset-IRTE-to-host-control-if-new-route-isn-.patch
 	patches.suse/KVM-x86-Explicitly-treat-routing-entry-type-changes-.patch
 	patches.suse/KVM-x86-Take-irqfds.lock-when-adding-deleting-IRQ-by.patch
+	patches.suse/iommu-amd-Return-an-error-if-vCPU-affinity-is-set-fo.patch
 	patches.suse/KVM-x86-Do-not-use-kvm_rip_read-unconditionally-in-K.patch
 	patches.suse/KVM-x86-Do-not-use-kvm_rip_read-unconditionally-for-.patch
 	patches.suse/arm64-Rework-checks-for-broken-Cavium-HW-in-the-PI-code.patch
