--- a/series.conf
+++ b/series.conf
@@ -22326,6 +22326,7 @@
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-for-no.patch
 	patches.suse/clocksource-Scale-the-watchdog-read-retries-automati.patch
+	patches.suse/x86-CPU-AMD-Do-the-common-init-on-future-Zens-too.patch
 	patches.suse/x86-resctrl-Remove-hard-coded-memory-bandwidth-limit.patch
 	patches.suse/x86-resctrl-Read-supported-bandwidth-sources-from-CPUID.patch
 	patches.suse/x86-resctrl-Remove-redundant-variable-in-mbm_config_write_.patch
