--- a/series.conf
+++ b/series.conf
@@ -11381,6 +11381,7 @@
 	patches.suse/xen-fix-UAF-in-dmabuf_exp_from_pages.patch
 	patches.suse/xen-gntdev-remove-struct-gntdev_copy_batch-from-stac.patch
 	patches.suse/xen-netfront-Fix-TX-response-spurious-interrupts.patch
+	patches.suse/KVM-Pass-new-routing-entries-and-irqfd-when-updating.patch
 	patches.suse/KVM-x86-Avoid-calling-kvm_is_mmio_pfn-when-kvm_x86_o.patch
 	patches.suse/KVM-x86-mmu-Locally-cache-whether-a-PFN-is-host-MMIO.patch
 	patches.suse/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
