blacklist.conf: add fix that cannot apply
Our code is too out of date for this to apply, and
the issue cannot occur here because of that anyway.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1228,3 +1228,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 683eab94da75bcf55a9c65e0c31d0529edebe86d # missing 98dfec0d2f969391e4dc176f0858f3f5c82e7e21
 3f66ccbaaef3a0c5bd844eab04e3207b4061c546 # fix that changes kABI by redefining enum req_op
 b7ee30f0efd12f42735ae233071015389407966c # fix that can't apply: our md code doesn't match
+7202082b7b7a256d04ec96131c7f859df0a79f64 # fix that can't apply; issue cannot occur here
