blacklist.conf: add fix that cannot apply
Our code is out of date, and the code to be
fixed here isn't eeven present.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1229,3 +1229,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 3f66ccbaaef3a0c5bd844eab04e3207b4061c546 # fix that changes kABI by redefining enum req_op
 b7ee30f0efd12f42735ae233071015389407966c # fix that can't apply: our md code doesn't match
 7202082b7b7a256d04ec96131c7f859df0a79f64 # fix that can't apply; issue cannot occur here
+7ef50c4c6a9c36fa3ea6f1681a80c0bf9a797345 # fix that cannot apply: code to be fixed not present
