--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1230,3 +1230,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 b7ee30f0efd12f42735ae233071015389407966c # fix that can't apply: our md code doesn't match
 7202082b7b7a256d04ec96131c7f859df0a79f64 # fix that can't apply; issue cannot occur here
 7ef50c4c6a9c36fa3ea6f1681a80c0bf9a797345 # fix that cannot apply: code to be fixed not present
+ad70c6bc776b53e61c8db6533c833aff0ff5da8b # fix that uses functions/code not present
