blacklist.conf: add fixx that uses function not present
Uses queue_limits_start_update(), but that is part of a
large change that we do not have.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1232,3 +1232,4 @@ b7ee30f0efd12f42735ae233071015389407966c # fix that can't apply: our md code doe
 7ef50c4c6a9c36fa3ea6f1681a80c0bf9a797345 # fix that cannot apply: code to be fixed not present
 ad70c6bc776b53e61c8db6533c833aff0ff5da8b # fix that uses functions/code not present
 b5f717b31b5e478398740db8aee2ecbc4dd72bf3 # fix that does not apply; issue cannot occur here
+708e2371f77a9d3f2f1d54d1ec835d71b9d0dafe # fix uses function(s)/data not present
