--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1233,3 +1233,4 @@ b7ee30f0efd12f42735ae233071015389407966c # fix that can't apply: our md code doe
 ad70c6bc776b53e61c8db6533c833aff0ff5da8b # fix that uses functions/code not present
 b5f717b31b5e478398740db8aee2ecbc4dd72bf3 # fix that does not apply; issue cannot occur here
 708e2371f77a9d3f2f1d54d1ec835d71b9d0dafe # fix uses function(s)/data not present
+7ba962f4d73b2b768c977db2c7cd9551798bba26 # fix that cannot apply; ublk code base out of date
