blacklist.conf: add fix that cannot apply
Our ublk code base is quite a bit out of date,
so this does not apply.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1234,3 +1234,4 @@ ad70c6bc776b53e61c8db6533c833aff0ff5da8b # fix that uses functions/code not pres
 b5f717b31b5e478398740db8aee2ecbc4dd72bf3 # fix that does not apply; issue cannot occur here
 708e2371f77a9d3f2f1d54d1ec835d71b9d0dafe # fix uses function(s)/data not present
 7ba962f4d73b2b768c977db2c7cd9551798bba26 # fix that cannot apply; ublk code base out of date
+c2c8089f325ed703fd5123b39e2dece1dd605904 # fix that cannot apply; ublk code base out of date
