blacklist.conf: add df3b8ca604f224eb4cd51669416ad4d607682273

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -603,3 +603,5 @@ cc4d900d0d6d8dd5c41832a93ff3cfa629a78f9a # no support of stm32 console
 3ab10f83e277ba9640742cbba67b8df369591450 # too intrusive
 d2bd39c0456b75be9dfc7d774b8d021355c26ae3 # needed only for better context for 6cff20ce3b92
 7722d6fb54e428a8f657fccf422095a8d7e2d72c # patch is broken. Complaint to upstream in progress.
+df3b8ca604f224eb4cd51669416ad4d607682273 # only affects fuse-over-io-uring.
+
