--- a/blacklist.conf
+++ b/blacklist.conf
@@ -604,4 +604,4 @@ cc4d900d0d6d8dd5c41832a93ff3cfa629a78f9a # no support of stm32 console
 d2bd39c0456b75be9dfc7d774b8d021355c26ae3 # needed only for better context for 6cff20ce3b92
 7722d6fb54e428a8f657fccf422095a8d7e2d72c # patch is broken. Complaint to upstream in progress.
 df3b8ca604f224eb4cd51669416ad4d607682273 # only affects fuse-over-io-uring.
-
+b6f58a3f4aa8dba424356c7a69388a81f4459300 # Breaks the kABI for a minor code improvement
