--- a/series.conf
+++ b/series.conf
@@ -5892,6 +5892,7 @@
 	patches.suse/io_uring-waitid-don-t-abuse-io_tw_state.patch
 	patches.suse/io_uring-kbuf-reallocate-buf-lists-on-upgrade.patch
 	patches.suse/io_uring-uring_cmd-switch-sqe-to-async_data-on-EAGAI.patch
+	patches.suse/io_uring-uring_cmd-remove-dead-req_has_async_data-ch.patch
 	patches.suse/io_uring-uring_cmd-unconditionally-copy-SQEs-at-prep.patch
 	patches.suse/block-cleanup-and-fix-batch-completion-adding-conditions.patch
 	patches.suse/partitions-mac-fix-handling-of-bogus-partition-table.patch
