--- a/series.conf
+++ b/series.conf
@@ -6053,6 +6053,7 @@
 	patches.suse/mtd-rawnand-cadence-fix-incorrect-device-in-dma_unma.patch
 	patches.suse/mtd-rawnand-cadence-fix-unchecked-dereference.patch
 	patches.suse/mtd-spi-nor-sst-Fix-SST-write-failure.patch
+	patches.suse/io-wq-backoff-when-retrying-worker-creation.patch
 	patches.suse/io_uring-prevent-opcode-speculation.patch
 	patches.suse/block-merge-remove-unnecessary-min-with-UINT_MAX.patch
 	patches.suse/block-fix-NULL-pointer-dereferenced-within-__blk_rq_.patch
