io_uring/rw: forbid multishot async reads (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6055,6 +6055,7 @@
 	patches.suse/mtd-spi-nor-sst-Fix-SST-write-failure.patch
 	patches.suse/io-wq-backoff-when-retrying-worker-creation.patch
 	patches.suse/io_uring-prevent-opcode-speculation.patch
+	patches.suse/io_uring-rw-forbid-multishot-async-reads.patch
 	patches.suse/block-merge-remove-unnecessary-min-with-UINT_MAX.patch
 	patches.suse/block-fix-NULL-pointer-dereferenced-within-__blk_rq_.patch
 	patches.suse/md-raid-Fix-the-set_queue_limits-implementations.patch
