net: usb: qmi_wwan: initialize MAC header offset in qmimux_rx_fixup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34948,6 +34948,7 @@
 	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
 	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
 	patches.suse/isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb_probe.patch
+	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
 
 	########################################################
 	# end of sorted patches
