Revert "wifi: ath10k: avoid unnecessary wait for service ready message" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34943,6 +34943,7 @@
 	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
+	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 
 	########################################################
 	# end of sorted patches
