isdn: mISDN: hfcsusb: fix memory leak in hfcsusb_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34947,6 +34947,7 @@
 	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
 	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
+	patches.suse/isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb_probe.patch
 
 	########################################################
 	# end of sorted patches
