--- a/series.conf
+++ b/series.conf
@@ -34949,6 +34949,7 @@
 	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
 	patches.suse/isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb_probe.patch
 	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
+	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
 
 	########################################################
 	# end of sorted patches
