wifi: zd1211rw: fix potential memory leak in __zd_usb_enable_rx() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34944,6 +34944,7 @@
 	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
+	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 
 	########################################################
 	# end of sorted patches
