--- a/series.conf
+++ b/series.conf
@@ -27078,6 +27078,7 @@
 	patches.suse/usb-typec-ucsi-don-t-retrieve-PDOs-if-not-supported.patch
 	patches.suse/usb-uas-set-host-status-byte-on-data-completion-erro.patch
 	patches.suse/usb-gadget-aspeed_udc-validate-endpoint-index-for-as.patch
+	patches.suse/xhci-dbc-Allow-users-to-modify-DbC-poll-interval-via.patch
 	patches.suse/usb-xhci-move-link-chain-bit-quirk-checks-into-one-h.patch
 	patches.suse/xhci-Apply-XHCI_RESET_TO_DEFAULT-quirk-to-TGL.patch
 	patches.suse/usb-typec-ucsi-move-ucsi_acknowledge-from-ucsi_read_.patch
