Bluetooth: btrtl: Fix memory leak in rtlbt_parse_firmware_v2() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34946,6 +34946,7 @@
 	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
+	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
 
 	########################################################
 	# end of sorted patches
