drm/sched: Fix deadlock in drm_sched_entity_kill_jobs_cb (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34953,6 +34953,7 @@
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
 	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
+	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
 
 	########################################################
 	# end of sorted patches
