Documentation: ACPI: i2c-muxes: fix I2C device references (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34952,6 +34952,7 @@
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
+	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
 
 	########################################################
 	# end of sorted patches
