--- a/series.conf
+++ b/series.conf
@@ -34957,6 +34957,7 @@
 	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
 	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
+	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 
 	########################################################
 	# end of sorted patches
