lib/crypto: curve25519-hacl64: Fix older clang KASAN workaround for GCC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34950,6 +34950,7 @@
 	patches.suse/isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb_probe.patch
 	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
+	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 
 	########################################################
 	# end of sorted patches
