--- a/series.conf
+++ b/series.conf
@@ -34945,6 +34945,7 @@
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
+	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
 
 	########################################################
 	# end of sorted patches
