xhci: dbc: poll at different rate depending on data transfer activity (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23745,6 +23745,7 @@
 	patches.suse/thunderbolt-Reset-only-non-USB4-host-routers-in-resu.patch
 	patches.suse/thunderbolt-Improve-DisplayPort-tunnel-setup-process.patch
 	patches.suse/xhci-retry-Stop-Endpoint-on-buggy-NEC-controllers.patch
+	patches.suse/xhci-dbc-poll-at-different-rate-depending-on-data-tr.patch
 	patches.suse/usb-xhci-Add-error-handling-in-xhci_map_urb_for_dma.patch
 	patches.suse/usb-typec-ucsi-Clean-up-UCSI_CABLE_PROP-macros.patch
 	patches.suse/usb-dwc3-am62-fix-module-unload-reload-behavior.patch
