drm/i915: Avoid lock inversion when pinning to GGTT on CHV/BXT+VTD (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34954,6 +34954,7 @@
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
 	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
 	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
+	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
 
 	########################################################
 	# end of sorted patches
