--- a/series.conf
+++ b/series.conf
@@ -34942,6 +34942,7 @@
 	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
+	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 
 	########################################################
 	# end of sorted patches
