--- a/series.conf
+++ b/series.conf
@@ -56207,6 +56207,7 @@
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
 	patches.suse/media-videobuf2-forbid-remove_bufs-when-legacy-filei.patch
 	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
+	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 
 	########################################################
 	# end of sorted patches
