--- a/series.conf
+++ b/series.conf
@@ -56208,6 +56208,7 @@
 	patches.suse/media-videobuf2-forbid-remove_bufs-when-legacy-filei.patch
 	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
+	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 
 	########################################################
 	# end of sorted patches
