drm/xe/guc: Synchronize Dead CT worker with unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56209,6 +56209,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
+	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 
 	########################################################
 	# end of sorted patches
