--- a/series.conf
+++ b/series.conf
@@ -12916,6 +12916,7 @@
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
+	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
