--- a/series.conf
+++ b/series.conf
@@ -12896,6 +12896,7 @@
 	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
+	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
