gpio: swnode: don't use the swnode's name as the key for GPIO lookup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12908,6 +12908,7 @@
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
 	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
+	patches.suse/gpio-swnode-don-t-use-the-swnode-s-name-as-the-key-f.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
