drm/amd/display: Fix NULL deref in debugfs odm_combine_segments (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12913,6 +12913,7 @@
 	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
 	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
 	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
+	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
