--- a/series.conf
+++ b/series.conf
@@ -12828,6 +12828,7 @@
 	patches.suse/hwmon-sht3x-Fix-error-handling.patch
 	patches.suse/firmware-arm_scmi-Account-for-failed-debug-initializ.patch
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
+	patches.suse/drm-amd-display-increase-max-link-count-and-fix-link.patch
 	patches.suse/drm-amd-display-use-GFP_NOWAIT-for-allocation-in-int.patch
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
