ACPI: SBS: Fix present test in acpi_battery_read() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12906,6 +12906,7 @@
 	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
+	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
