--- a/series.conf
+++ b/series.conf
@@ -12911,6 +12911,7 @@
 	patches.suse/gpio-swnode-don-t-use-the-swnode-s-name-as-the-key-f.patch
 	patches.suse/gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
+	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
