drm/mediatek: Add pm_runtime support for GCE power control (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12917,6 +12917,7 @@
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
+	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
