--- a/series.conf
+++ b/series.conf
@@ -12907,6 +12907,7 @@
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
+	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
