--- a/series.conf
+++ b/series.conf
@@ -12915,6 +12915,7 @@
 	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
+	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
