Revert "wifi: ath10k: avoid unnecessary wait for service ready message" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12898,6 +12898,7 @@
 	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 	patches.suse/media-videobuf2-forbid-remove_bufs-when-legacy-filei.patch
+	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
