drm/i915: Fix conversion between clock ticks and nanoseconds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12912,6 +12912,7 @@
 	patches.suse/gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
 	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
+	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
