Bluetooth: MGMT: Fix OOB access in parse_adv_monitor_pattern() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12902,6 +12902,7 @@
 	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
 	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
+	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
