gpiolib: fix invalid pointer access in debugfs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12909,6 +12909,7 @@
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
 	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
 	patches.suse/gpio-swnode-don-t-use-the-swnode-s-name-as-the-key-f.patch
+	patches.suse/gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
