drm/sched: Fix deadlock in drm_sched_entity_kill_jobs_cb (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12910,6 +12910,7 @@
 	patches.suse/Documentation-ACPI-i2c-muxes-fix-I2C-device-referenc.patch
 	patches.suse/gpio-swnode-don-t-use-the-swnode-s-name-as-the-key-f.patch
 	patches.suse/gpiolib-fix-invalid-pointer-access-in-debugfs.patch
+	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
