--- a/series.conf
+++ b/series.conf
@@ -12899,6 +12899,7 @@
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 	patches.suse/media-videobuf2-forbid-remove_bufs-when-legacy-filei.patch
 	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
+	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
