--- a/series.conf
+++ b/series.conf
@@ -12918,6 +12918,7 @@
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
+	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
