--- a/series.conf
+++ b/series.conf
@@ -12905,6 +12905,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
 	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
+	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
