KVM: VMX: Apply MMIO Stale Data mitigation if KVM maps MMIO into the guest (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55076,6 +55076,7 @@
 	patches.suse/KVM-SVM-Delete-IRTE-link-from-previous-vCPU-before-s.patch
 	patches.suse/KVM-SVM-Delete-IRTE-link-from-previous-vCPU-irrespec.patch
 	patches.suse/KVM-x86-mmu-Locally-cache-whether-a-PFN-is-host-MMIO.patch
+	patches.suse/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
