x86/CPU/AMD: Add missing terminator for zen5_rdseed_microcode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12933,6 +12933,7 @@
 +hare	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
 	patches.suse/wifi-ath12k-Add-MODULE_FIRMWARE-entries.patch
 	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
+	patches.suse/x86-CPU-AMD-Add-missing-terminator-for-zen5_rdseed_m.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
