--- a/series.conf
+++ b/series.conf
@@ -12902,6 +12902,7 @@
 	patches.suse/x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
+	patches.suse/btrfs-fix-memory-leak-of-qgroup_list-in-btrfs_add_qg.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
 	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
