kABI fix for KVM: VMX: Apply MMIO Stale Data mitigation if KVM maps MMIO into the guest (git-fixes) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56854,6 +56854,7 @@
 	patches.kabi/atm-atmtcp-Prevent-arbitrary-write-in-atmtcp_recv_co.patch
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
 	patches.kabi/KVM-x86-Snapshot-the-host-s-DEBUGCTL-in-common-x86.patch
+	patches.kabi/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
