btrfs: use smp_mb__after_atomic() when forcing COW in create_pending_snapshot() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12353,6 +12353,7 @@
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
+	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/cpuset-fix-failure-to-enable-isolated-partition-when-conta.patch
 	patches.suse/cpuset-Use-new-excpus-for-nocpu-error-check-when-enabling-.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
