--- a/series.conf
+++ b/series.conf
@@ -12826,6 +12826,7 @@
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
 	patches.suse/btrfs-directly-free-partially-initialized-fs_info-in.patch
+	patches.suse/btrfs-send-fix-duplicated-rmdir-operations-when-usin.patch
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0-after-hibernate.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
