--- a/blacklist.conf
+++ b/blacklist.conf
@@ -587,3 +587,4 @@ b7ee30f0efd12f42735ae233071015389407966c # fix requires function and struct fiel
 dbdf2a7feb422f9bacfd12774e624cf26f503eb0 # rust
 0fbbcab7f9082cdc233da5e5e353f69830f11956 # comments only
 68889dfd547bd8eabc5a98b58475d7b901cf5129 # we do CONFIG_SOCK_CGROUP_DATA=y
+cb7380de9e4cbc9a24216b722ec50e092ae83036 # cleanup designed to break kABI
