blacklist.conf: rust only

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -237,6 +237,8 @@ scripts/Makefile.clang
 
 rust
 Documentation/rust
+scripts/generate_rust_analyzer.py
+
 
 # Blacklisted Commits
 # -------------------
