--- a/series.conf
+++ b/series.conf
@@ -34603,6 +34603,7 @@
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
+	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
