--- a/blacklist.conf
+++ b/blacklist.conf
@@ -592,3 +592,4 @@ dbdf2a7feb422f9bacfd12774e624cf26f503eb0 # rust
 0fbbcab7f9082cdc233da5e5e353f69830f11956 # comments only
 68889dfd547bd8eabc5a98b58475d7b901cf5129 # we do CONFIG_SOCK_CGROUP_DATA=y
 cb7380de9e4cbc9a24216b722ec50e092ae83036 # cleanup designed to break kABI
+d73ef9ec8794c4dad25774d655a8f284ad9ff641 # cleanup without code change
