--- a/blacklist.conf
+++ b/blacklist.conf
@@ -58,6 +58,7 @@ drivers/platform/loongarch		# mips
 drivers/staging/android
 drivers/video/fbdev/hyperv_fb.c
 drivers/cpuidle/cpuidle-riscv-sbi.c     # RISC-V not supported
+tools/include/nolibc/			# nolibc not supported
 tools/testing/kunit/qemu_configs/sparc.py	# SPARC-32 not supported
 tools/testing/selftests/riscv		# RISC-V not supported
 tools/testing/selftests/rseq/rseq-riscv-bits.h	# RISC-V not supported
