io_uring/net: save msg_control for compat (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6196,6 +6196,7 @@
 	patches.suse/drm-xe-regs-remove-a-duplicate-definition-for-RING_C.patch
 	patches.suse/drm-xe-cancel-pending-job-timer-before-freeing-sched.patch
 	patches.suse/efi-Don-t-map-the-entire-mokvar-table-to-determine-i.patch
+	patches.suse/io_uring-net-save-msg_control-for-compat.patch
 	patches.suse/block-Remove-zone-write-plugs-when-handling-native-zone-append-writes.patch
 	patches.suse/block-fix-kmem_cache-of-name-bio-108-already-exists.patch
 	patches.suse/iommu-amd-Preserve-default-DTE-fields-when-updating-Host-Page-Ta
