io_uring/net: don't clear REQ_F_NEED_CLEANUP unconditionally (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6639,6 +6639,7 @@
 	patches.suse/drm-amdgpu-pm-Handle-SCLK-offset-correctly-in-overdr.patch
 	patches.suse/perf-x86-Check-data-address-for-IBS-software-filter.patch
 	patches.suse/perf-x86-rapl-Fix-error-handling-in-init_rapl_pmus.patch
+	patches.suse/io_uring-net-don-t-clear-REQ_F_NEED_CLEANUP-uncondit.patch
 	patches.suse/regulator-core-Fix-deadlock-in-create_regulator.patch
 	patches.suse/regulator-dummy-force-synchronous-probing.patch
 	patches.suse/regulator-check-that-dummy-regulator-has-been-probed.patch
