--- a/series.conf
+++ b/series.conf
@@ -7156,6 +7156,7 @@
 	patches.suse/io_uring-io-wq-eliminate-redundant-io_work_get_acct-.patch
 	patches.suse/io_uring-io-wq-add-io_worker.acct-pointer.patch
 	patches.suse/io_uring-io-wq-move-worker-lists-to-struct-io_wq_acc.patch
+	patches.suse/io_uring-io-wq-cache-work-flags-in-variable.patch
 	patches.suse/loop-factor-out-a-loop_assign_backing_file-helper.patch
 	patches.suse/loop-check-in-LO_FLAGS_DIRECT_IO-in-loop_default_blocksize.patch
 	patches.suse/ublk-complete-command-synchronously-on-error.patch
