--- a/series.conf
+++ b/series.conf
@@ -7153,6 +7153,7 @@
 	patches.suse/mtd-nand-Fix-a-kdoc-comment.patch
 	patches.suse/PCI-MSI-Handle-the-NOMASK-flag-correctly-for-all-PCI.patch
 	patches.suse/clocksource-drivers-stm32-lptimer-Use-wakeup-capable.patch
+	patches.suse/io_uring-io-wq-eliminate-redundant-io_work_get_acct-.patch
 	patches.suse/loop-factor-out-a-loop_assign_backing_file-helper.patch
 	patches.suse/loop-check-in-LO_FLAGS_DIRECT_IO-in-loop_default_blocksize.patch
 	patches.suse/ublk-complete-command-synchronously-on-error.patch
