--- a/blacklist.conf
+++ b/blacklist.conf
@@ -606,3 +606,4 @@ d2bd39c0456b75be9dfc7d774b8d021355c26ae3 # needed only for better context for 6c
 df3b8ca604f224eb4cd51669416ad4d607682273 # only affects fuse-over-io-uring.
 b6f58a3f4aa8dba424356c7a69388a81f4459300 # Breaks the kABI for a minor code improvement
 bd2703b42decebdcddf76e277ba76b4c4a142d73 # code change without security impact, requires kabi change.
+7c71a0af81ba72de9b2c501065e4e718aba9a271 # Intrusive io_uring perf optimization for buffer bundle.
