io_uring/net: fix accept multishot handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7159,6 +7159,7 @@
 	patches.suse/io_uring-io-wq-cache-work-flags-in-variable.patch
 	patches.suse/io_uring-io-wq-do-not-use-bogus-hash-value.patch
 	patches.suse/io_uring-check-for-iowq-alloc_workqueue-failure.patch
+	patches.suse/io_uring-net-fix-accept-multishot-handling.patch
 	patches.suse/loop-factor-out-a-loop_assign_backing_file-helper.patch
 	patches.suse/loop-check-in-LO_FLAGS_DIRECT_IO-in-loop_default_blocksize.patch
 	patches.suse/ublk-complete-command-synchronously-on-error.patch
