io_uring/msg: initialise msg request opcode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8301,6 +8301,7 @@
 	patches.suse/9p-trans_fd-mark-concurrent-read-and-writes-to-p9_co.patch
 	patches.suse/io_uring-net-account-memory-for-zc-sendmsg.patch
 	patches.suse/ublk-make-sure-ubq-canceling-is-set-when-queue-is-frozen.patch
+	patches.suse/io_uring-msg-initialise-msg-request-opcode.patch
 	patches.suse/io_uring-always-do-atomic-put-from-iowq.patch
 	patches.suse/nvmet-pci-epf-Keep-completion-queues-mapped.patch
 	patches.suse/nvme-ioctl-don-t-warn-on-vectorized-uring_cmd-with-f.patch
