io_uring/kbuf: reject zero sized provided buffers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8414,6 +8414,7 @@
 	patches.suse/gpio-zynq-Fix-wakeup-source-leaks-on-device-unbind.patch
 	patches.suse/gpiolib-of-Fix-the-choice-for-Ingenic-NAND-quirk.patch
 	patches.suse/gpiolib-of-Move-Atmel-HSMCI-quirk-up-out-of-the-regu.patch
+	patches.suse/io_uring-kbuf-reject-zero-sized-provided-buffers.patch
 	patches.suse/ublk-fix-handling-recovery-reissue-in-ublk_abort_queue.patch
 	patches.suse/xen-Change-xen-acpi-processor-dom0-dependency.patch
 	patches.suse/x86-xen-fix-balloon-target-initialization-for-PVH-do.patch
