--- a/series.conf
+++ b/series.conf
@@ -8750,6 +8750,7 @@
 	patches.suse/cpufreq-scpi-Fix-null-ptr-deref-in-scpi_cpufreq_get_rate.patch
 	patches.suse/cpufreq-cppc-Fix-invalid-return-value-in-.get-callback.patch
 	patches.suse/io_uring-don-t-duplicate-flushing-in-io_req_post_cqe.patch
+	patches.suse/io_uring-fix-sync-handling-of-io_fallback_tw.patch
 	patches.suse/block-fix-race-between-set_blocksize-and-read-paths.patch
 	patches.suse/nvmet-fix-out-of-bounds-access-in-nvmet_enable_port.patch
 	patches.suse/block-never-reduce-ra_pages-in-blk_apply_bdi_limits.patch
