io_uring: ensure deferred completions are flushed for multishot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8944,6 +8944,7 @@
 	patches.suse/net-export-a-helper-for-adding-up-queue-stats.patch
 	patches.suse/virtio-net-fix-total-qstat-values.patch
 	patches.suse/module-ensure-that-kobject_put-is-safe-for-module-ty.patch
+	patches.suse/io_uring-ensure-deferred-completions-are-flushed-for.patch
 	patches.suse/io_uring-sqpoll-Increase-task_work-submission-batch-.patch
 	patches.suse/loop-Add-sanity-check-for-read-write_iter.patch
 	patches.suse/block-only-update-request-sector-if-needed.patch
