io_uring: fix overflow resched cqe reordering (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9211,6 +9211,7 @@
 	patches.suse/can-kvaser_pciefd-Continue-parsing-DMA-buf-after-dro.patch
 	patches.suse/can-slcan-allow-reception-of-short-error-messages.patch
 	patches.suse/smb-client-Fix-use-after-free-in-cifs_fill_dirent.patch
+	patches.suse/io_uring-fix-overflow-resched-cqe-reordering.patch
 	patches.suse/loop-don-t-require-write_iter-for-writable-files-in-loop_c.patch
 	patches.suse/nvme-avoid-creating-multipath-sysfs-group-under-name.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-add-PD-workaround-on-RK3576.patch
