--- a/series.conf
+++ b/series.conf
@@ -9253,6 +9253,7 @@
 	patches.suse/nvmet-fcloop-don-t-wait-for-lport-cleanup.patch
 	patches.suse/nvme-fc-do-not-reference-lsrsp-after-failure.patch
 	patches.suse/io_uring-account-drain-memory-to-cgroup.patch
+	patches.suse/io_uring-kbuf-account-ring-io_buffer_list-memory.patch
 	patches.suse/btrfs-fix-fsync-of-files-with-no-hard-links-not-persisting.patch
 	patches.suse/0001-btrfs-enhance-ASSERT-to-take-optional-format-string.patch
 	patches.suse/0002-btrfs-use-verbose-ASSERT-in-volumes.c.patch
