io_uring: fix task leak issue in io_wq_create() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10446,6 +10446,7 @@
 	patches.suse/drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
 	patches.suse/drm-xe-Fix-early-wedge-on-GuC-load-failure.patch
+	patches.suse/io_uring-fix-task-leak-issue-in-io_wq_create.patch
 	patches.suse/io_uring-sqpoll-don-t-put-task_struct-on-tctx-setup-.patch
 	patches.suse/io_uring-fix-potential-page-leak-in-io_sqe_buffer_re.patch
 	patches.suse/aoe-clean-device-rq_list-in-aoedev_downdev.patch
