--- a/series.conf
+++ b/series.conf
@@ -10534,6 +10534,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
+	patches.suse/io_uring-make-fallocate-be-hashed-work.patch
 	patches.suse/io_uring-rsrc-fix-folio-unpinning.patch
 	patches.suse/ublk-sanity-check-add_dev-input-for-underflow.patch
 	patches.suse/Revert-PCI-ACPI-Fix-allocated-memory-release-on-erro.patch
