io_uring/rsrc: don't rely on user vaddr alignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10536,6 +10536,7 @@
 	patches.suse/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
 	patches.suse/io_uring-make-fallocate-be-hashed-work.patch
 	patches.suse/io_uring-rsrc-fix-folio-unpinning.patch
+	patches.suse/io_uring-rsrc-don-t-rely-on-user-vaddr-alignment.patch
 	patches.suse/ublk-sanity-check-add_dev-input-for-underflow.patch
 	patches.suse/Revert-PCI-ACPI-Fix-allocated-memory-release-on-erro.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
