--- a/series.conf
+++ b/series.conf
@@ -55078,6 +55078,7 @@
 	patches.suse/KVM-x86-mmu-Locally-cache-whether-a-PFN-is-host-MMIO.patch
 	patches.suse/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.suse/KVM-x86-Convert-vcpu_run-s-immediate-exit-param-into.patch
+	patches.suse/KVM-x86-Drop-kvm_x86_ops.set_dr6-in-favor-of-a-new-K.patch
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
