KVM: SVM: Pass through GHCB MSR if and only if VM is an SEV-ES guest (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11394,6 +11394,7 @@
 	patches.suse/KVM-TDX-Use-kvm_arch_vcpu.host_debugctl-to-restore-t.patch
 	patches.suse/KVM-x86-Convert-vcpu_run-s-immediate-exit-param-into.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
+	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
 	patches.suse/KVM-TDX-Move-TDX-hardware-setup-from-main.c-to-tdx.c.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
