--- a/series.conf
+++ b/series.conf
@@ -12256,6 +12256,7 @@
 	patches.suse/platform-x86-asus-wmi-Re-add-extra-keys-to-ignore_ke.patch
 	patches.suse/KVM-arm64-Mark-freed-S2-MMUs-as-invalid.patch
 	patches.suse/KVM-arm64-vgic-fix-incorrect-spinlock-API-usage.patch
+	patches.suse/KVM-SVM-Sync-TPR-from-LAPIC-into-VMCB-V_TPR-even-if-.patch
 	patches.suse/KVM-s390-Fix-access-to-unavailable-adapter-indicator-pages.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
 	patches.suse/net-tcp-Fix-a-NULL-pointer-dereference-when-using-TCP-AO-w.patch
