KVM: x86: Have all vendor neutral sub-configs depend on KVM_X86, not just KVM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12601,6 +12601,7 @@
 	patches.suse/msft-hv-3348-scsi-storvsc-Remove-redundant-ternary-operators.patch
 	patches.suse/scsi-mpt3sas-Fix-crash-in-transport-port-remove-by-using-i.patch
 	patches.suse/vhost-vringh-Modify-the-return-value-check.patch
+	patches.suse/KVM-x86-Have-all-vendor-neutral-sub-configs-depend-o.patch
 	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
 	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
