--- a/series.conf
+++ b/series.conf
@@ -12684,6 +12684,7 @@
 	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
+	patches.suse/KVM-x86-mmu-Return-EAGAIN-if-userspace-deletes-moves.patch
 	patches.suse/KVM-TDX-Remove-redundant-__GFP_ZERO.patch
 	patches.suse/KVM-TDX-Fix-uninitialized-error-code-for-__tdx_bringup.patch
 	patches.suse/KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-next-R.patch
