KVM: TDX: Do not retry locally when the retry is caused by invalid memslot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12685,6 +12685,7 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/KVM-x86-mmu-Return-EAGAIN-if-userspace-deletes-moves.patch
+	patches.suse/KVM-TDX-Do-not-retry-locally-when-the-retry-is-cause.patch
 	patches.suse/KVM-TDX-Remove-redundant-__GFP_ZERO.patch
 	patches.suse/KVM-TDX-Fix-uninitialized-error-code-for-__tdx_bringup.patch
 	patches.suse/KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-next-R.patch
