--- a/series.conf
+++ b/series.conf
@@ -12688,6 +12688,7 @@
 	patches.suse/KVM-TDX-Do-not-retry-locally-when-the-retry-is-cause.patch
 	patches.suse/KVM-TDX-Remove-redundant-__GFP_ZERO.patch
 	patches.suse/KVM-TDX-Fix-uninitialized-error-code-for-__tdx_bringup.patch
+	patches.suse/KVM-SEV-Enforce-minimum-GHCB-version-requirement-for.patch
 	patches.suse/KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-next-R.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
